--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,10 +1,10 @@
 {% if page.meta.comments %}
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
-  <script src="https://giscus.app/client.js"
+    <script src="https://giscus.app/client.js"
         data-repo="FTS427/FTS427.github.io"
         data-repo-id="R_kgDOKEWC7w"
-        data-category="Show and tell"
-        data-category-id="DIC_kwDOKEWC784CfkB_"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOKEWC784CfkB7"
         data-mapping="url"
         data-strict="0"
         data-reactions-enabled="1"
@@ -12,7 +12,6 @@
         data-input-position="top"
         data-theme="preferred_color_scheme"
         data-lang="zh-CN"
-        data-loading="lazy"
         crossorigin="anonymous"
         async>
     </script>
