--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -7,3 +7,8 @@
     --md-accent-fg-color--light: #88c0d0;
     --md-accent-fg-color--dark:  #88c0d0;
 }
+
+@font-face {
+  font-family: "JetBrain Mono";
+  src: "https://fonts.loli.net/css?family=JetBrains";
+}
