--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -7,6 +7,7 @@
                 <div class="md-copyright__highlight">
                     {{ config.copyright }}
                 </div>
+                {% endif %}
 
                 Made with
                 <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
