--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -28,7 +28,7 @@
 
             {% if config.extra.icp %}
             <div class="md-icp">
-                <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">
+                <a href="https://icp.gov.moe/?keyword=20250427" target="_blank" rel="noopener">
                     {{ config.extra.icp }}
                 </a>
             </div>
