--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -1,13 +1,15 @@
 <footer class="md-footer">
     <div class="md-footer-meta md-typeset">
         <div class="md-footer-meta__inner md-grid">
-            
+
             <div class="md-copyright">
                 {% if config.copyright %}
                 <div class="md-copyright__highlight">
                     {{ config.copyright }}
                 </div>
                 {% endif %}
+
+                This work is openly licensed via <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener" >CC BY-NC-SA 4.0</a><br>
 
                 Made with
                 <a href="https://squidfunk.github.io/mkdocs-material/" target="_blank" rel="noopener">
@@ -33,7 +35,7 @@
                 </a>
             </div>
             {% endif %}
-        
+
         </div>
     </div>
 </footer>
